--- a/views/index.html
+++ b/views/index.html
@@ -235,7 +235,7 @@
                     href: location.origin + "/advertise?page=cover_list"
                 },
                 advertise_list: {
-                    title: "首页轮播",
+                    title: "软文管理",
                     href: location.origin + "/advertise?page=advertise_list"
                 },
                 user:""
@@ -254,7 +254,6 @@
                     for (var i = 0; i < this.editableTabs2.length; i++) {
                         if (obj.title == this.editableTabs2[i].title) {
                             this.editableTabsValue2 = this.editableTabs2[i].name;
-                           
                             return
                         }
                     }
